--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,10 @@ body{
    display: none;
 }
 
+.hide{
+   display: none;
+}
+
 label {
     /* Other styling... */
     text-align: right;
@@ -409,10 +413,9 @@ label {
 }
 
 /*Nav*/
-
+/*
 nav{
-    /*font-family: 'Montserrat', sans-serif;
-    font-family: 'Rampart One', cursive;*/
+    
     font-family: 'Merienda', cursive;
     width: 100%;
     height: 60px;
@@ -433,6 +436,14 @@ nav ul li{
     display: inline-block;
 }
 
+nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    padding: 20px;
+    margin: 0px;
+    
+} */
+
 #floatright{
     float: right;
 }
@@ -441,13 +452,6 @@ nav ul li{
     float: right;
 }
 
-nav ul li a{
-    text-decoration: none;
-    color: #fff;
-    padding: 20px;
-    margin: 0px;
-    
-}
 
 #floatleft li a:hover{
     font-weight: bold;
@@ -886,7 +890,7 @@ a {
   position: relative;
   z-index: 1;
   background: rgba(255, 255, 255, 0.7);
-  max-width: 360px;
+  width: 80%;
   margin: 0 auto 20px;
   padding-top: 15px;
   text-align: center;
