--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -3,7 +3,7 @@ body{
 	margin: 0;
 	font-size: 16px;
 	background-color: #009688;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif !important;
 	font-weight: 400;
 }
 
@@ -158,4 +158,9 @@ body{
 
 .result-box .btn{
 	margin-right: 20px;
+}
+
+.profile-img{
+	display: block;
+	margin: auto;
 }
