--- a/templates/about.html
+++ b/templates/about.html
@@ -3,32 +3,32 @@
 	<h2 style="text-align: center;">Tim Penelitian</h2>
 	<table class="researcher">
 		<tr>
-			<td><img class="img-home" src='{% static "img/siska-modified.png" %}' width="180" height="180" alt="Siska Oktari, M.Psi.,Psikolog"></td>
+			<td><img class="img-home new-img" src='{% static "img/siska-modified.png" %}' width="180" height="180" alt="Siska Oktari, M.Psi.,Psikolog"></td>
 			<td colspan="2"><h4>Ketua Penelitian</h4>
 			<p align="justify"><strong>Siska Oktari, M.Psi.,Psikolog</strong> merupakan staff dosen Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Selain itu, beliau juga merupakan psikolog di bidang klinis anak dan remaja. Saat ini, beliau fokus penelitian dan pemberian intervensi pada bidang perkembangan dan kesehatan mental khususnya pada anak dan remaja.</p></td>
 		</tr>
 		<tr>
-			<td><img class="img-home" src='{% static "img/nelia-modified.png" %}' width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A"></td>
+			<td><img class="img-home new-img" src='{% static "img/nelia-modified.png" %}' width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A"></td>
 			<td colspan="2"><h4>Anggota Penelitian</h4>
 			<p align="justify"><strong>Nelia Afriyeni, S.Psi.,M.A</strong> merupakan staff dosen Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Beliau merupakan seorang ilmuwan psikologi di bidang klinis. Selain itu, beliau juga mengampu mata kuliah yang berkaitan dengan statistik dan psikometri.</p></td>
 		</tr>
 		<tr>
-			<td><img class="img-home" src='{% static "img/rozi.jpg" %}' height="180" alt="Dr. Rozi Sastra Purna, M.Psi.,Psikolog"></td>
+			<td><img class="img-home new-img" src='{% static "img/rozi.jpg" %}' height="180" alt="Dr. Rozi Sastra Purna, M.Psi.,Psikolog"></td>
 			<td colspan="2"><h4>Anggota Penelitian</h4>
 			<p align="justify"><strong>Dr. Rozi Sastra Purna, M.Psi.,Psikolog</strong> merupakan dosen di Program Studi Psikologi Fakultas Kedokteran Universitas Andalas. Selain itu, beliau juga merupakan seorang psikolog di bidang pendidikan. Beliau fokus pada penelitian terkait dengan pendidikan anak usia dini, regulasi emosi.</p></td>
 		</tr>
 		<tr>
-			<td><img class="img-home" src='{% static "img/eva-modified.png" %}' height="180" alt="Evantrida Mailyza Musly, M.Psi.,Psikolog "></td>
+			<td><img class="img-home new-img" src='{% static "img/eva-modified.png" %}' height="180" alt="Evantrida Mailyza Musly, M.Psi.,Psikolog "></td>
 			<td colspan="2"><h4>Koordinator Penelitian</h4>
 			<p align="justify"><strong>Evantrida Mailyza Musly, M.Psi.,Psikolog </strong> merupakan seorang psikolog klinis anak dan remaja. Selain itu, beliau juga merupakan seorang Konselor untuk Mahasiswa dan Dosen di Politeknik Negeri Padang. Beliau fokus pada isu-isu terkait dengan pengasuhan, perkembangan dan pendidikan anak serta  self development.</p></td>
 		</tr>
 		<tr>
-			<td><img class="img-home" src='{% static "img/della-modified.png" %}' height="180" alt="Della Ria Stefani Rajagukguk "></td>
+			<td><img class="img-home new-img" src='{% static "img/della-modified.png" %}' height="180" alt="Della Ria Stefani Rajagukguk "></td>
 			<td colspan="2"><h4>Anggota Penelitian</h4>
 			<p align="justify"><strong>Della Ria Stefani Rajagukguk </strong> merupakan mahasiswa di Program Studi Psikologi Fakultas Kedokteran Universitas Andalas Angkatan 2018.</p></td>
 		</tr>
 		<tr>
-			<td><img class="img-home" src='{% static "img/bunga-modified.png" %}' height="180" alt="Bunga Derima Putri"></td>
+			<td><img class="img-home new-img" src='{% static "img/bunga-modified.png" %}' height="180" alt="Bunga Derima Putri"></td>
 			<td colspan="2"><h4>Anggota Penelitian</h4>
 			<p align="justify"><strong>Bunga Derima Putri</strong> merupakan mahasiswa di Program Studi Psikologi Fakultas Kedokteran Universitas Andalas Angkatan 2018.</p></td>
 		</tr>
