--- a/templates/snippets/intro_box.html
+++ b/templates/snippets/intro_box.html
@@ -10,19 +10,19 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div style="width: 80%; margin-left: 10%;">
-				<img style="display: block; margin: auto;" src="static/img/siska-modified.png" width="180" height="180" alt="Siska Oktari, M.Psi.,Psikolog">
+				<img class="new-img" style="display: block; margin: auto;" src="static/img/siska-modified.png" width="180" height="180" alt="Siska Oktari, M.Psi.,Psikolog">
 				<p style="text-align: center;"><strong>Siska Oktari, M.Psi.,Psikolog</strong></p>
 			</div>
 		</div>
 		<div class="col-md-4">
 			<div style="width: 80%; margin-left: 10%;">
-				<img style="display: block; margin: auto;" src="static/img/nelia-modified.png" width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A">
+				<img class="new-img" style="display: block; margin: auto;" src="static/img/nelia-modified.png" width="180" height="180" alt="Nelia Afriyeni, S.Psi.,M.A">
 				<p style="text-align: center;"><strong>Nelia Afriyeni, S.Psi.,M.A</strong></p>
 			</div>
 		</div>
 		<div class="col-md-4">
 			<div style="width: 80%; margin-left: 10%;">
-				<img style="display: block; margin: auto;" src="static/img/rozi.jpg" width="180" height="180" alt="Dr. Rozi Sastra Purna, M.Psi.,Psikolog ">
+				<img class="new-img" style="display: block; margin: auto;" src="static/img/rozi.jpg" width="180" height="180" alt="Dr. Rozi Sastra Purna, M.Psi.,Psikolog ">
 				<p style="text-align: center;"><strong>Dr. Rozi Sastra Purna, M.Psi.,Psikolog </strong></p>
 			</div>
 		</div>
