--- a/templates/snippets/style.html
+++ b/templates/snippets/style.html
@@ -15,6 +15,14 @@
 		outline: none;
 	}
 
+	.new-img{
+		transition: 0.3s;
+	}
+
+	.new-img:hover{
+		transform: scale(1.1);
+	}
+
 	.custom-box{
 		max-width: 700px;
 		background-color: #fff;
